--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{HTTPS} off
+RewriteCond %{HTTP:X-Forwarded-Proto} !https 
 RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
