--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server $NODE_DEBUG_OPTION --config config/webpack/webpack.config.js && node ./src/index.js",
-    "heroku-postbuild": "webpack-dev-server -p --config config/webpack.config.js --progress",
+    "heroku-postbuild": "webpack -p --config config/webpack/webpack.config.js --progress",
     "test": "cross-env NODE_PATH=src NODE_ENV=test ava --concurrency 18",
     "test:watch": "npm run test -- --watch",
     "test:debug": "cross-env NODE_PATH=src NODE_ENV=test inspect node_modules/ava/profile.js",
