--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
 RewriteEngine On
-RewriteCond %{HTTP:X-Forwarded-Proto} !https 
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+RewriteBase /
+RewriteRule ^index\\.php$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.php [L]
