--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Ken Boyer <cool.dev206@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node ./src/index.js",
+    "start": "node config/webpack/webpack.config.js",
     "test": "cross-env NODE_PATH=src NODE_ENV=test ava --concurrency 18",
     "test:watch": "npm run test -- --watch",
     "test:debug": "cross-env NODE_PATH=src NODE_ENV=test inspect node_modules/ava/profile.js",
@@ -15,7 +15,8 @@
     "test:coverage": "nyc npm run test",
     "test:coverage:verify": "nyc check-coverage",
     "test:coverage:report": "nyc report --reporter=html && opn coverage/index.html",
-    "prod": "cross-env NODE_ENV=production webpack-dev-server --config config/webpack/webpack.config.js --env.production",
+    "prod": "cross-env NODE_ENV=production node server.js --env.production",
+    "postinstall": "webpack -p",
     "postinstall": "webpack -p --config config/webpack/webpack.config.js --progress",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack/webpack.config.js --env.production && mv dist/index.html dist/index.html && cp .htaccess dist/.htaccess",
     "build:clean": "npm run test:clean && rimraf ./dist"
