--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "accounting": "^0.4.1",
     "autoprefixer": "^7.1.2",
     "babel-polyfill": "^6.23.0",
+    "babel-register": "^6.23.0",
     "bcryptjs": "^2.4.3",
     "btoa": "1.1.2",
     "cool-ascii-faces": "1.3.4",
