--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:coverage:verify": "nyc check-coverage",
     "test:coverage:report": "nyc report --reporter=html && opn coverage/index.html",
     "prod": "cross-env NODE_ENV=production webpack-dev-server --config config/webpack/webpack.config.js --env.production",
-    "build": "cross-env NODE_ENV=production webpack --config config/webpack/webpack.config.js --env.production && mv dist/index.html dist/index.html && cp index.php dist/index.php && cp .htaccess dist/.htaccess",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack/webpack.config.js --env.production && mv dist/index.html dist/index.html && cp .htaccess dist/.htaccess",
     "build:clean": "npm run test:clean && rimraf ./dist"
   },
   "ava": {
@@ -93,6 +93,7 @@
     "cross-env": "^3.2.4",
     "currency-symbol-map": "^3.1.0",
     "es6-promise": "^4.1.0",
+    "express": "^4.15.3",
     "html-webpack-plugin": "^2.28.0",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
@@ -124,7 +125,9 @@
     "rimraf": "^2.6.1",
     "svg-jsx-loader": "^0.0.16",
     "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.11.0",
     "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^4.0.0"
   }
 }
