--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "test:coverage:report": "nyc report --reporter=html && opn coverage/index.html",
     "postinstall": "npm run build",
     "prod": "node server.js",
-    "build": "cross-env NODE_ENV=production webpack --config config/webpack/webpack.config.js --env.production && mv dist/index.html dist/index.html && cp .htaccess dist/.htaccess",
-    "build:clean": "npm run test:clean && rimraf ./dist"
+    "clean": "rimraf ./dist ./build",
+    "build": "rimraf ./dist && webpack",
   },
   "ava": {
     "require": [
