--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prod": "node server.js",
     "clean": "rimraf ./dist ./build",
     "build": "rimraf ./dist && webpack",
+    "deploy": "rimraf ./build && NODE_ENV=production webpack -p --config config/webpack/webpack.config.js",
   },
   "ava": {
     "require": [
