--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "test:coverage:report": "nyc report --reporter=html && opn coverage/index.html",
     "postinstall": "npm run build",
     "prod": "node server.js",
-    "clean": "rimraf ./dist ./build",
-    "build": "rimraf ./dist && webpack",
-    "deploy": "rimraf ./build && NODE_ENV=production webpack -p --config config/webpack/webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack/webpack.config.js --env.production && mv dist/index.html dist/index.html",
+    "build:clean": "npm run test:clean && rimraf ./dist"
   },
   "ava": {
     "require": [
