--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "test:coverage": "nyc npm run test",
     "test:coverage:verify": "nyc check-coverage",
     "test:coverage:report": "nyc report --reporter=html && opn coverage/index.html",
-    "postinstall": "npm run build",
     "prod": "node server.js",
-    "build": "cross-env NODE_ENV=production webpack --config config/webpack/webpack.config.js --env.production && mv dist/index.html dist/index.html",
-    "build:clean": "npm run test:clean && rimraf ./dist"
+    "postinstall": "npm run build",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack/webpack.config.js --env.production && rimraf ./dist",
+    "clean": "rimraf ./dist ./build"
   },
   "ava": {
     "require": [
@@ -85,16 +85,13 @@
   "dependencies": {
     "accounting": "^0.4.1",
     "autoprefixer": "^7.1.2",
-    "babel-plugin-transform-react-createelement-to-jsx": "^1.0.1",
     "babel-polyfill": "^6.23.0",
-    "babel-register": "^6.23.0",
     "bcryptjs": "^2.4.3",
     "btoa": "1.1.2",
     "cool-ascii-faces": "1.3.4",
     "cross-env": "^3.2.4",
     "currency-symbol-map": "^3.1.0",
     "es6-promise": "^4.1.0",
-    "express": "^4.15.3",
     "html-webpack-plugin": "^2.28.0",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
@@ -126,9 +123,7 @@
     "rimraf": "^2.6.1",
     "svg-jsx-loader": "^0.0.16",
     "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.11.0",
     "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^4.0.0"
   }
 }
