--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
     "test:coverage": "nyc npm run test",
     "test:coverage:verify": "nyc check-coverage",
     "test:coverage:report": "nyc report --reporter=html && opn coverage/index.html",
-    "clean": "rimraf ./dist ./build",
-    "build": "rimraf ./dist && webpack --config config/webpack/webpack.config.js --env.production",
-    "deploy": "rimraf ./build && NODE_ENV=production webpack -p --config config/webpack/webpack.config.js",
-    "postinstall": "npm run build",
-    "prod": "node server.js"
+    "prod": "cross-env NODE_ENV=production webpack-dev-server --config config/webpack/webpack.config.js --env.production",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack/webpack.config.js --env.production && mv dist/index.html dist/index.html && cp .htaccess dist/.htaccess",
+    "build:clean": "npm run test:clean && rimraf ./dist"
   },
   "ava": {
     "require": [
